site.yml: adjusted role name being imported README.md: adjusted documentation

--- a/site.yml
+++ b/site.yml
@@ -20,4 +20,4 @@
   remote_user: ansible
   tasks:
     - import_role:
-        name: cmndrsp0ck.galera-cluster
+        name: cmndrsp0ck.galera-cluster-node
