--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 ansible_managed = Please do not change this file directly since it is managed by Ansible and will be overwritten
-remote_user = root
+remote_user = ansible
 host_key_checking=false
 roles_path = ./roles
 vault_password_file = ~/.vaultpass.txt
