--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,4 @@
 #install roles
-- src: cmndrsp0ck.galera-cluster
+- src: https://github.com/cmndrsp0ck/ansible-galera-cluster-node.git
 
-- src: cmndrsp0ck.galera-lb
+- src: https://github.com/cmndrsp0ck/ansible-galera-lb.git
